PCI: Revert "PCI: i386/x86_84: disable PCI resource decode on device disable"

This reverts commit 53e4d30dd666d7f83598957ee4a415eefb47c9a6.

It was found that it caused unneeded problems (see
http://bugzilla.kernel.org/show_bug.cgi?id=7082 for details of one such
issue.

Signed-off-by: Greg Kroah-Hartman <gregkh@suse.de>